--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="rockPaperScissors.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="rockPaperScissors.js" defer></script>
 </head>
+
 <body>
-<script>Game()</script>
-    
+    <div class="main">
+        <h1>Rock Paper scissors game</h1>
+        <p>By Maxim Frano</p>
+        <div class="buttons">
+            <button id="rock"><img src="images/rock.jpg" alt="rock"></button>
+            <button id="paper"><img src="images/paper.jpg" alt="paper"></button>
+            <button id="scissors"><img src="images/scissors.jpg" alt="scissors"></button>
+        </div>
+
+        <h2>Score</h2>
+        <p>Best of 5</p>
+        <div class="score">
+            <p>Player</p>
+            <p id="player">0</p>
+            <p>:</p>
+            <p id="computer">0</p>
+            <p>Computer</p>
+        </div>
+
+        <p id="winner"></p>
+
+        <button id="newGame">New Game</button>
+
+    </div>
 </body>
+
 </html>
