--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="main">
-        <h1>Rock Paper scissors game</h1>
+        <h1>Rock Paper Scissors Game</h1>
         <p>By Maxim Frano</p>
         <div class="buttons">
             <button id="rock"><img src="images/rock.jpg" alt="rock"></button>
@@ -21,6 +21,7 @@
 
         <h2>Score</h2>
         <p>Best of 5</p>
+        <p id="computerMove"></p>
         <div class="score">
             <p>Player</p>
             <p id="player">0</p>
